--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
 
 /* Your CSS Code here. */
 #btn{
-	background-color:black;
-	color:white;
-	border-radius:5px;
+	background-color: rgb(0, 0, 0);
+	color: rgb(255, 255, 255);
+	border-radius: 5px;
 }
 #btn:hover{
-	background-color:yellow;
-	color:black;
-	border-radius:30px;
+	background-color: yellow;
+	color: black;
+	border-radius: 30px;
 }
