--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
 	background-color: rgb(0, 0, 0);
 	color: rgb(255, 255, 255);
 	border-radius: 5px;
+	border: 0px none rgb(255, 255, 255);
 }
 #btn:hover{
 	background-color: yellow;
